--- a/addon_school/school_management/views/Student_Subject_Assigning.xml
+++ b/addon_school/school_management/views/Student_Subject_Assigning.xml
@@ -2,21 +2,21 @@
   <data>
         <record model="ir.ui.view" id="wizard_form_view">
             <field name="name">wizard.form</field>
-            <field name="model">school_management.students</field>
+            <field name="model">school_management.a_w</field>
             <field name="arch" type="xml">
-                <form string="Add Attendees">
+                <form string="Assign Subjects">
                     <group>
-                        <field name="name"/>
-                        <field name="attendance_id"/>
+                        <field name="session_id"/>
+                        <field name="attendee_ids"/>
                     </group>
                 </form>
             </field>
         </record>
 
         <act_window id="launch_session_wizard"
-                    name="Add Attendees"
-                    src_model="school_management.time_table"
-                    res_model="school_management.students"
+                    name="Assign Subjects"
+                    src_model="school_management.students"
+                    res_model="school_management.a_w"
                     view_mode="form"
                     target="new"
                     key2="client_action_multi"/>
